--- a/app/views/content/layout/_navbar.html.erb
+++ b/app/views/content/layout/_navbar.html.erb
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg">
 
   <a class="navbar-brand" href="/">
-    <%= image_tag "logo_medium.png", size: "48" %>
-    <%= image_tag "joss.svg" %>
+    <%= image_tag "logotype.png", width: "200" %>
+
   </a>
 
   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
