Refactor about page

--- a/app/views/content/about/_general.html.erb
+++ b/app/views/content/about/_general.html.erb
@@ -1,34 +1,11 @@
-
-<h3>What <em>exactly</em> do you mean by 'journal'</h3>
-
 <p>
-  The <%= Rails.application.settings['name'] %> (<%= Rails.application.settings['abbreviation'] %>) is an academic journal (ISSN <%= Rails.application.settings['issn'] %>) with a formal
-  peer review process that is designed to <em>improve the quality of the software submitted</em>.
-  Upon acceptance into <%= Rails.application.settings['abbreviation'] %>, a Crossref DOI is minted and we list your paper on the <%= Rails.application.settings['abbreviation'] %> website.
-</p>
-
-<h3>Don't we have enough journals already?</h3>
-
-<p>
-  Perhaps, and in a perfect world we'd rather papers about software weren't necessary but we
-  recognize that for most researchers, papers and not software are the currency of academic research
-  and that citations are required for a good career.
+ReScience C is a platinum open-access peer-reviewed journal that targets computational research and encourages the explicit <a href="/about#faq">replication</a> of already published research, promoting new and open-source implementations in order to ensure that the original research is <a href="/about#faq">reproducible</a>. You can read about the ideas behind ReScience C in the article <a href="https://doi.org/10.7717/peerj-cs.142" target="_blank">Sustainable computational science: the ReScience initiative</a>
 </p>
 
 <p>
-  We built this journal because we believe that after you've done the hard work of writing great
-  software, it shouldn't take weeks and months to write a paper about your work.
-</p>
-
-<h3>You said <em>developer friendly</em>, what do you mean?</h3>
-
-<p>
-  We have a simple submission workflow and <%= link_to "extensive documentation", "https://joss.readthedocs.io/en/latest/submitting.html", target: "_blank" %> to help you prepare your
-  submission. If your software is already well documented then paper preparation should take no
-  more than an hour.
+To achieve this goal, the whole publishing chain is radically different from other traditional scientific journals. ReScience C lives on <a href="https://github.com/rescience/">GitHub</a> where each new implementation of a computational study is made available together with comments, explanations and tests. Each submission takes the form of an issue that is publicly reviewed and tested in order to guarantee that any researcher can re-use it. If you ever replicated computational results (or failed at) from the literature in your research, ReScience C is the perfect place to publish your new implementation.
 </p>
 
 <p>
-  You can read more about our motivations to build <%= Rails.application.settings['abbreviation'] %> in our
-  <a href="http://www.arfon.org/announcing-the-journal-of-open-source-software" target="_blank">announcement blog post</a>.
+ReScience C is collaborative and open by design. Everything can be forked and modified. Don’t hesitate to <a href="/about#write">write a submission, <a href="/about#faq">join us</a> and to <a href="/about#board">become a reviewer</a>.
 </p>
