--- a/app/views/papers/_form.html.erb
+++ b/app/views/papers/_form.html.erb
@@ -40,7 +40,7 @@
   <div class="row">
     <div class="col">
       <%= f.label "Type of submission" %>
-      <%= f.select(:submission_kind, {'New submission' => 'new', 'Resubmission' => 'resubmission', 'Major new version' => 'new version'}, {include_blank: false, prompt: "Select one and explain choice below"}, class: "form-control", style: "margin-right: 12px;") %>
+      <%= f.select(:submission_kind, {'Replication' => 'replication', 'Reproduction' => 'reproduction', 'Letter' => 'letter'}, {include_blank: false, prompt: "Select one and explain choice below"}, class: "form-control", style: "margin-right: 12px;") %>
     </div>
     <div class="col" data-controller="autocomplete" data-autocomplete-url-value="<%= search_subjects_path %>">
       <%= f.label "Main subject of the paper" %>
@@ -62,14 +62,6 @@
     <div class="col form-check" style="margin-left: 15px;">
       <input type="checkbox" id="author-check" class="pre-check form-check-input">
       <label class="form-check-label" for="author-check">I certify that I am submitting software for which I am a primary author</label>
-    </div>
-    <div class="col form-check" style="margin-left: 15px;">
-      <input type="checkbox" id="paper-check" class="pre-check form-check-input">
-      <label class="form-check-label" for="paper-check">I have verified that my paper compiles using one of <a href="https://joss.readthedocs.io/en/latest/submitting.html#checking-that-your-paper-compiles" target="_blank">these tools</a>.</label>
-    </div>
-    <div class="col form-check">
-      <input type="checkbox" id="coc-check" class="pre-check form-check-input">
-      <label class="form-check-label" for="coc-check">I confirm that I read and will adhere to the <%= setting(:abbreviation) %> <a href="/about#code_of_conduct" target="_blank">code of conduct</a></label>
     </div>
   </div>
 </div>
