Update repository link

--- a/app/views/content/layout/_footer.html.erb
+++ b/app/views/content/layout/_footer.html.erb
@@ -16,6 +16,6 @@
     <br>
     ISSN <%= Rails.application.settings['issn'] %>
     <br>
-    <%= link_to image_tag("github.svg", size: "32x32"), "https://github.com/xuanxu/resciencec", target: '_blank' %>
+    <%= link_to image_tag("github.svg", size: "32x32"), "https://github.com/ReScience/ReScienceC", target: '_blank' %>
   </p>
 </div>
