--- a/app/views/papers/_actions.html.erb
+++ b/app/views/papers/_actions.html.erb
@@ -1,4 +1,4 @@
-<% if false # Tracks are disabled # current_user.aeic? %>
+<% if current_user.aeic? %>
 <div class="card" id="track-info">
   <div class="card-header">Track</div>
   <div class="card-body">
