Refactor about page

--- a/app/views/content/about/_faq.html.erb
+++ b/app/views/content/about/_faq.html.erb
@@ -1,14 +1,6 @@
 <h1>Frequently Asked Questions</h1>
 <p>If your question is not answered below, please <a href="https://github.com/rescience/rescience" target="_blank">create an issue</a> on GitHub and ask it there.</p>
 
-<h3>Can I help?</h3>
-<p>Yes! You can:</p>
-<ul>
-  <li>Become a reviewer by commenting on <a href="https://github.com/ReScience/ReScience/issues/27" target="_blank">this issue</a> (see <a href="/about#reviewers">our current list of reviewers</a> for the information we would like to have about you)</li>
-  <li><a href="/about#write">Submit</a> paper for the work you’ve already replicated</li>
-  <li>Spread the word about ReScience C in your community (<a href="http://twitter.com/ReScienceEds" target="_blank">Twitter</a>, mailing lists, blogs, etc.)</li>
-</ul>
-
 <h3>What’s the difference between replication and reproduction?</h3>
 <p>
   There is no consensus yet on what exactly these two terms mean, so here is how we understand and use them.
@@ -97,10 +89,6 @@
 
 <h3>Does ReScience C issue DOIs (Digital Object Identifiers)?</h3>
 <p>
-  ReScience C itself does not, but every article published in ReScience C receives a DOI from, and is indexed by <a href="https://zenodo.org/collection/user-rescience" target="_blank">Zenodo</a>.
+  Yes, every article published in ReScience C receives a DOI.
 </p>
 
-<h3>What is the preferred format for the accompanying article?</h3>
-<p>
-  We prefer LaTeX using the <a href="https://github.com/rescience/template" target="_blank">provided template</a> but Word or OpenOffice are also fine if the result is comparable to the PDF produced by our template.
-</p>
