--- a/app/views/content/about/_general.html.erb
+++ b/app/views/content/about/_general.html.erb
@@ -7,5 +7,5 @@ To achieve this goal, the whole publishing chain is radically different from oth
 </p>
 
 <p>
-ReScience C is collaborative and open by design. Everything can be forked and modified. Don’t hesitate to <a href="/about#write">write a submission, <a href="/about#faq">join us</a> and to <a href="/about#editorial-board">become a reviewer</a>.
+ReScience C is collaborative and open by design. Everything can be forked and modified. Don’t hesitate to <%= link_to "write a submission", new_paper_path %>, <a href="/about#faq">join us</a> and to <%= link_to "become a reviewer", setting(:reviewers_signup_url) %>.
 </p>
