--- a/app/views/papers/_form.html.erb
+++ b/app/views/papers/_form.html.erb
@@ -68,7 +68,7 @@
   <div class="row">
     <div class="col form-check" style="margin-left: 15px;">
       <input type="checkbox" id="author-check" class="pre-check form-check-input">
-      <label class="form-check-label" for="author-check">I certify that I am submitting software for which I am a primary author</label>
+      <label class="form-check-label" for="author-check">I certify that I am a primary author of this submission</label>
     </div>
   </div>
 </div>
